Fixed spacing and inconsistent media query nesting

--- a/css/index.css
+++ b/css/index.css
@@ -179,14 +179,12 @@ header nav {
   header nav {
     justify-content: space-around;
     margin: 5.2% 0 0 0;
-    /* (40/768)*100 = 5.2 */
     width: 100%;
   }
 }
 @media (max-width: 400px) {
   header nav {
     margin: 5% 0 0 0;
-    /* (20/400)*100 = 5 */
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -205,16 +203,17 @@ header nav a:hover {
   -o-transform: rotate(45deg);
 }
 @media (max-width: 400px) {
+  header nav a:first-child {
+    border-top: 1px solid #000;
+  }
+}
+@media (max-width: 400px) {
   header nav a {
     border-bottom: 1px solid #000;
     font-size: 2rem;
     padding: 5% 0;
-    /* (20/400)*100 =  */
     text-align: center;
     width: 100%;
-  }
-  header nav a:first-child {
-    border-top: 1px solid #000;
   }
 }
 header .logo {
@@ -241,7 +240,6 @@ header .logo {
   .cta {
     justify-content: center;
     margin: 9.4% 0 0 0;
-    /* (72/768)*100 = 9.4 */
   }
 }
 @media (max-width: 400px) {
@@ -263,14 +261,22 @@ header .logo {
   .cta .cta-text {
     margin: 0;
   }
-  .cta .cta-text h1 {
-    margin: 0 0 5.1% 0;
-  }
 }
 @media (max-width: 400px) {
   .cta .cta-text {
     margin: 0;
   }
+}
+@media (max-width: 768px) {
+  .cta .cta-text h1 {
+    margin: 0 0 5.1% 0;
+  }
+}
+.cta img {
+  -webkit-transform: rotate(25deg);
+  -moz-transform: rotate(25deg);
+  -ms-transform: rotate(25deg);
+  -o-transform: rotate(25deg);
 }
 @media (max-width: 768px) {
   .cta img {
@@ -291,20 +297,16 @@ header .logo {
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
-  -webkit-box-shadow: 6px 6px 8px #000;
-  -moz-box-shadow: 6px 6px 8px #000;
-  box-shadow: 6px 6px 8px #000;
+  -webkit-box-shadow: 3px 3px 6px #000;
+  -moz-box-shadow: 3px 3px 6px #000;
+  box-shadow: 3px 3px 6px #000;
 }
 .cta .cta-text button:hover {
   background: black;
   color: white;
-  -webkit-opacity: 0.5;
-  -moz-opacity: 0.5;
-  opacity: 0.5;
-  -webkit-transform: skew(5deg, 25deg);
-  -moz-transform: skew(5deg, 25deg);
-  -ms-transform: skew(5deg, 25deg);
-  -o-transform: skew(5deg, 25deg);
+  -webkit-opacity: 0.8;
+  -moz-opacity: 0.8;
+  opacity: 0.8;
 }
 .main-content {
   border-top: 2px solid black;
@@ -317,21 +319,30 @@ header .logo {
 @media (max-width: 768px) {
   .main-content {
     margin: 9.8% 2.6% 4.6% 2.6%;
-    /* (75/768)*100 = 9.8 , (20/768)*100 = 2.6 , (35/768)*100 = 4.6 */
     padding: 4.6% 0;
-    /* (35/768)*100 = 4.6 */
   }
 }
 @media (max-width: 400px) {
   .main-content {
     margin: 18.75% 5% 8.75% 5%;
-    /* (75/400)*100 = 18.75 , (20/400)*100 = 5 , (35/400)*100 = 8.75 */
     padding: 12.5% 0;
   }
 }
 .main-content .top-content {
   display: flex;
   justify-content: space-around;
+}
+@media (max-width: 768px) {
+  .main-content .top-content {
+    justify-content: space-between;
+    margin: 0 1.3%;
+  }
+}
+@media (max-width: 400px) {
+  .main-content .top-content {
+    flex-direction: column;
+    margin: 0;
+  }
 }
 .main-content .top-content .text-content {
   display: flex;
@@ -352,23 +363,6 @@ header .logo {
 .main-content .top-content button:hover {
   background-color: #000066;
 }
-@media (max-width: 768px) {
-  .main-content .top-content {
-    justify-content: space-between;
-    margin: 0 1.3%;
-  }
-  .main-content .top-content .text-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-}
-@media (max-width: 400px) {
-  .main-content .top-content {
-    flex-direction: column;
-    margin: 0;
-  }
-}
 .main-content .middle-img {
   display: block;
   margin: 30px auto;
@@ -388,10 +382,37 @@ header .logo {
   display: flex;
   justify-content: space-around;
 }
+@media (max-width: 768px) {
+  .main-content .bottom-content {
+    justify-content: space-between;
+    margin: 0 1.3%;
+  }
+}
+@media (max-width: 400px) {
+  .main-content .bottom-content {
+    flex-direction: column;
+    margin: 0;
+    margin: 8% 0 0 0;
+  }
+}
 .main-content .bottom-content .text-content {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+@media (max-width: 768px) {
+  .main-content .bottom-content .text-content {
+    width: 31%;
+  }
+}
+@media (max-width: 400px) {
+  .main-content .bottom-content .text-content {
+    margin: 8.4% 0 0 0;
+    width: 100%;
+  }
+  .main-content .bottom-content .text-content:first-child {
+    margin: 0;
+  }
 }
 .main-content .bottom-content button {
   display: flex;
@@ -407,34 +428,6 @@ header .logo {
 .main-content .bottom-content button:hover {
   background-color: #000066;
 }
-@media (max-width: 768px) {
-  .main-content .bottom-content {
-    justify-content: space-between;
-    margin: 0 1.3%;
-  }
-  .main-content .bottom-content .text-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 31%;
-  }
-}
-@media (max-width: 400px) {
-  .main-content .bottom-content {
-    flex-direction: column;
-    margin: 0;
-    margin: 8% 0 0 0;
-  }
-  .main-content .bottom-content .text-content {
-    display: flex;
-    margin: 8.4% 0 0 0;
-    /* (27/400)*100 = 6.75 */
-    width: 100%;
-  }
-  .main-content .bottom-content .text-content:first-child {
-    margin: 0;
-  }
-}
 .main-content .bottom-content p {
   padding-right: 20px;
 }
@@ -447,7 +440,6 @@ header .logo {
 @media (max-width: 400px) {
   .contact {
     margin: 0 5%;
-    /* (20/400)*100 = 5 */
     padding: 0;
   }
 }
