--- a/less/main-content.less
+++ b/less/main-content.less
@@ -1,27 +1,37 @@
 // Main Content Styles
 
 .main-content {
-   border-top: 2px solid black; 
-   border-bottom: 2px solid black;
-   margin: 75px 0 35px 0;
-   padding: 35px 0;
-   font-size: 16px;
-   line-height: 18px;
+    border-top: 2px solid black; 
+    border-bottom: 2px solid black;
+    margin: 75px 0 35px 0;
+    padding: 35px 0;
+    font-size: 16px;
+    line-height: 18px;
 
     @media @tablet {
-    margin: 9.8% 2.6% 4.6% 2.6%; /* (75/768)*100 = 9.8 , (20/768)*100 = 2.6 , (35/768)*100 = 4.6 */
-    padding: 4.6% 0;  /* (35/768)*100 = 4.6 */
-        }
+        margin: 9.8% 2.6% 4.6% 2.6%;
+        padding: 4.6% 0;
+    }
 
     @media @phone {
-    margin: 18.75% 5% 8.75% 5%; /* (75/400)*100 = 18.75 , (20/400)*100 = 5 , (35/400)*100 = 8.75 */
-    padding: 12.5% 0;
-        }
+        margin: 18.75% 5% 8.75% 5%;
+        padding: 12.5% 0;
+    }
 
    .top-content {
         display: flex;
         justify-content: space-around;
       
+        @media @tablet {
+            justify-content: space-between;
+            margin: 0 1.3%;
+        }
+
+        @media @phone {
+            flex-direction: column;
+            margin: 0;
+        }
+
         .text-content{
             display: flex;
             flex-direction: column;
@@ -35,27 +45,7 @@
                 background-color: darken(blue, 30%);
             }
         }
-
-        @media @tablet {
-            justify-content: space-between;
-            margin: 0 1.3%;
-
-                .text-content {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-    
-                
-            }
-           
-        }
-
-            @media @phone {
-                flex-direction: column;
-                margin: 0;
-            }
-
-    }
+    } // top-content
 
     .middle-img {
         display: block;
@@ -69,16 +59,40 @@
         @media @phone {
             margin: 10% 0 0 0;
         }
-    }
+    } // middle-img
 
     .bottom-content {
         display: flex;
         justify-content: space-around;
 
+        @media @tablet{
+            justify-content: space-between;
+            margin: 0 1.3%;
+        }
+
+        @media @phone{
+            flex-direction: column;
+            margin: 0;
+            margin: 8% 0 0 0;
+        }
+
         .text-content{
             display: flex;
             flex-direction: column;
             justify-content: center;
+
+            @media @tablet {
+                width: 31%; 
+            }
+
+            @media @phone {
+                margin: 8.4% 0 0 0; 
+                width: 100%;
+
+                &:first-child{
+                    margin: 0;
+                }
+            }
         }
 
         button {
@@ -89,38 +103,8 @@
             }
         }
 
-        @media @tablet{
-            justify-content: space-between;
-            margin: 0 1.3%;
-
-            .text-content {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                width: 31%; 
-            }
-        }
-
-        @media @phone{
-            flex-direction: column;
-            margin: 0;
-            margin: 8% 0 0 0;
-
-            .text-content {
-                display: flex;
-                margin: 8.4% 0 0 0; /* (27/400)*100 = 6.75 */
-                width: 100%;
-
-                &:first-child{
-                    margin: 0;
-                }
-            }
-        }
-
-
-
         p {
             padding-right: 20px;
         }
-    }
+    } // bottom-content
 }// main-content
